// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should display selected country's details 1`] = `
<div>
  <div>
    <div
      class="countries-list-wrapper"
    >
      <input
        class="filter p-text"
        data-testid="filter-input"
        placeholder="Filter by country name or code"
        type="text"
      />
      <div
        class="flex"
      >
        <div
          class="scroller"
        >
          <table
            class="table"
          >
            <thead>
              <tr
                class="headers row"
              >
                <th
                  class="col"
                >
                  <div
                    class="sortable-header"
                  >
                    <button
                      class="flex p-text text-left active-sort"
                      type="button"
                    >
                      Name
                       
                      <span
                        class="arrow down"
                      />
                    </button>
                  </div>
                </th>
                <th
                  class="col"
                >
                  <div
                    class="sortable-header"
                  >
                    <button
                      class="flex p-text text-left "
                      type="button"
                    >
                      Code
                       
                      <span
                        class="arrow"
                      />
                    </button>
                  </div>
                </th>
                <th
                  class="col"
                >
                  <div
                    class="sortable-header"
                  >
                    <button
                      class="flex p-text text-left "
                      type="button"
                    >
                      Population
                       
                      <span
                        class="arrow"
                      />
                    </button>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row "
              >
                <td
                  class="text-left"
                >
                  <button
                    class="show-details-button"
                    type="button"
                  >
                    Belgium
                  </button>
                </td>
                <td
                  class="text-left p-text"
                >
                  BEL
                </td>
                <td
                  class="text-right p-text"
                >
                  1,000
                </td>
              </tr>
              <tr
                class="row selected"
              >
                <td
                  class="text-left"
                >
                  <button
                    class="show-details-button"
                    type="button"
                  >
                    Canada
                  </button>
                </td>
                <td
                  class="text-left p-text"
                >
                  CAN
                </td>
                <td
                  class="text-right p-text"
                >
                  500
                </td>
              </tr>
              <tr
                class="row "
              >
                <td
                  class="text-left"
                >
                  <button
                    class="show-details-button"
                    type="button"
                  >
                    Papua New Guinea
                  </button>
                </td>
                <td
                  class="text-left p-text"
                >
                  PNG
                </td>
                <td
                  class="text-right p-text"
                >
                  400
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="country-details-panel"
          data-testid="details-panel"
        >
          <table
            class="country-details"
          >
            <tbody>
              <tr>
                <td>
                  <b>
                    Country Name:
                  </b>
                </td>
                <td>
                  Canada
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Country Code:
                  </b>
                </td>
                <td>
                  CAN
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Capital City:
                  </b>
                </td>
                <td>
                  Ottawa
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Capital Population:
                  </b>
                </td>
                <td>
                  883,395
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Currency:
                  </b>
                </td>
                <td>
                  CAD
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<App /> should match snapshot 1`] = `
<div>
  <div>
    <div
      class="countries-list-wrapper"
    >
      <input
        class="filter p-text"
        data-testid="filter-input"
        placeholder="Filter by country name or code"
        type="text"
      />
      <div
        class="flex"
      >
        <div
          class="scroller"
        >
          <table
            class="table"
          >
            <thead>
              <tr
                class="headers row"
              >
                <th
                  class="col"
                >
                  <div
                    class="sortable-header"
                  >
                    <button
                      class="flex p-text text-left active-sort"
                      type="button"
                    >
                      Name
                       
                      <span
                        class="arrow down"
                      />
                    </button>
                  </div>
                </th>
                <th
                  class="col"
                >
                  <div
                    class="sortable-header"
                  >
                    <button
                      class="flex p-text text-left "
                      type="button"
                    >
                      Code
                       
                      <span
                        class="arrow"
                      />
                    </button>
                  </div>
                </th>
                <th
                  class="col"
                >
                  <div
                    class="sortable-header"
                  >
                    <button
                      class="flex p-text text-left "
                      type="button"
                    >
                      Population
                       
                      <span
                        class="arrow"
                      />
                    </button>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row "
              >
                <td
                  class="text-left"
                >
                  <button
                    class="show-details-button"
                    type="button"
                  >
                    Belgium
                  </button>
                </td>
                <td
                  class="text-left p-text"
                >
                  BEL
                </td>
                <td
                  class="text-right p-text"
                >
                  1,000
                </td>
              </tr>
              <tr
                class="row "
              >
                <td
                  class="text-left"
                >
                  <button
                    class="show-details-button"
                    type="button"
                  >
                    Canada
                  </button>
                </td>
                <td
                  class="text-left p-text"
                >
                  CAN
                </td>
                <td
                  class="text-right p-text"
                >
                  500
                </td>
              </tr>
              <tr
                class="row "
              >
                <td
                  class="text-left"
                >
                  <button
                    class="show-details-button"
                    type="button"
                  >
                    Papua New Guinea
                  </button>
                </td>
                <td
                  class="text-left p-text"
                >
                  PNG
                </td>
                <td
                  class="text-right p-text"
                >
                  400
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="country-details-panel"
          data-testid="details-panel"
        >
          <table
            class="country-details"
          >
            <tbody>
              <tr>
                <td>
                  <b>
                    Country Name:
                  </b>
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Country Code:
                  </b>
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Capital City:
                  </b>
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Capital Population:
                  </b>
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <td>
                  <b>
                    Currency:
                  </b>
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
